--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
   <h1>SC362202	Mobile Web Application Development</h1>
   <ul>
-     <li><a href="work1.html">งานที่ 1</a></li>
-    <li>งานที่ 2</li>
+    <li><a href="work1.html">งานที่ 1</a></li>
+    <li><a href="work2.html">งานที่ 2</li>
     <li>งานที่ 3</li>
   </ul>
   โดย นายธัชพล คำกำจร 663380165-1
