--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <ul>
     <li><a href="work1.html">งานที่ 1</a></li>
     <li><a href="work2.html">งานที่ 2</li>
-    <li>งานที่ 3</li>
+    <li><a href="work3.html">งานที่ 3</li>
   </ul>
   โดย นายธัชพล คำกำจร 663380165-1
 </body>
