--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <h1>SC362202	Mobile Web Application Development</h1>
   <ul>
     <li><a href="work1.html">งานที่ 1</a></li>
-    <li><a href="work2.html">งานที่ 2</li>
-    <li><a href="work3.html">งานที่ 3</li>
+    <li><a href="work2.html">งานที่ 2</a></li>
+    <li><a href="work3.html">งานที่ 3</a></li>
+    <li><a href="work4.html">งานที่ 4</a></li>
   </ul>
   โดย นายธัชพล คำกำจร 663380165-1
 </body>
