--- a/work4.html
+++ b/work4.html
@@ -13,26 +13,26 @@
       </a-text>
 
       <a-entity 
-        gltf-model="img/Cat.glb" scale="0.5 0.5 0.5"  position="0 2 -3" 
+        gltf-model="Cat.glb" scale="0.5 0.5 0.5"  position="0 2 -3" 
         animation="property: rotation; to: 0 -360 0; dur: 800; loop: true;">
       </a-entity>
 
       <a-entity 
-        gltf-model="img/Popcorn.glb" scale="0.7 0.7 0.7" position="0 -2 -3" 
+        gltf-model="Popcorn.glb" scale="0.7 0.7 0.7" position="0 -2 -3" 
         animation="property: rotation; to: 0 360 0; dur: 800; loop: true;">
       </a-entity>
 
       <a-entity 
-        gltf-model="img/Headphones.glb" scale="2 2 2" position="-7 0 -3" 
+        gltf-model="Headphones.glb" scale="2 2 2" position="-7 0 -3" 
         animation="property: position; to: -7 0.2 -3; dir: alternate; dur: 2000; loop: true;">
       </a-entity>
 
       <a-entity 
-        gltf-model="img/Controller.glb" scale="0.2 0.2 0.2" position="7 0 -3" 
+        gltf-model="Controller.glb" scale="0.2 0.2 0.2" position="7 0 -3" 
         animation="property: position; to: 6 0.2 -3; dir: alternate; dur: 2000; loop: true;">
       </a-entity>
 
-      <a-sky src="img/v2osk-P_hTMaVlkzk-unsplash.jpg"></a-sky>
+      <a-sky src="v2osk-P_hTMaVlkzk-unsplash.jpg"></a-sky>
     </a-scene>
   </body>
 </html>
