--- a/work4.html
+++ b/work4.html
@@ -8,7 +8,7 @@
       <a-camera id="camera" position="0 0 5"></a-camera>
 
       <a-text 
-         value="663380165-1 Thatchaphon Khamkamjon\nFaculty of Computer Science, Department of Information Technology." position="0 0 -3" align="center" color="#FFFFFF" scale="3 3 3" 
+         value="663380165-1 Thatchaphon Khamkamjon\nFaculty of Computer Science, Department of Information Technology." position="0 0 -3" align="center" scale="3 3 3" 
         animation="property: position; to: 0 0.1 -3; dir: alternate; dur: 1000; loop: true;">
       </a-text>
 
