--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <li><a href="work2.html">งานที่ 2</a></li>
     <li><a href="work3.html">งานที่ 3</a></li>
     <li><a href="work4.html">งานที่ 4</a></li>
+    <li><a href="work5.html">งานที่ 5</a></li>
   </ul>
   โดย นายธัชพล คำกำจร 663380165-1
 </body>
