--- a/work5.html
+++ b/work5.html
@@ -1,4 +1,9 @@
 <div data-snack-id="@rmyzo/work5" data-snack-platform="web" data-snack-preview="true" data-snack-theme="dark" style="overflow:hidden;background:#0C0D0E;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
 <script async src="https://snack.expo.dev/embed.js"></script>
 
-https://youtu.be/MdCcMbgEre0
+<iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/MdCcMbgEre0" 
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+</iframe>
